# shoccs

./: .clang-format  .dockerignore  .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  Makefile  SHOCCS_ARCHITECTURE_AND_KOKKOS_MIGRATION_SPEC.md  config.lua  eigenvalues.lua  heat.lua  readme.md  run-dev-container.fish  scalar_wave.lua  scalar_wave_1d.lua
benchmarks/: CMakeLists.txt  bench_block.cpp  bench_derivative.cpp  bench_expr.cpp  bench_rhs.cpp  bench_selection.cpp  bench_stencil.cpp
benchmarks/baselines/: README.md  baseline-20260320-024030.json  baseline-latest.json
docs/: CAPABILITY_AUDIT.md  CLEANUP_PLAN.md  CMakeLists.txt  ONBOARDING.md  brady2d_cpp_bridge_reference.md  conf.py  design.md  discrete_operators.md  expression_templating.md  field.md  geometry.md  index.md  lazyness.md  matrices.md  references.bib  stencils.md
docs/reference/: app-and-build.md  core-types.md  fields.md  io.md  matrices.md  mesh.md  mms.md  operators.md  py-brady2d.md  py-cpp-bridge.md  py-derivation.md  py-sweeps.md  py-tests-and-skills.md  random.md  simulation.md  stencils.md  systems.md  temporal.md  utils.md
scripts/stencil_gen/: _proto_interp.py  pyproject.toml
src/: CMakeLists.txt  StepController.hpp  boundaries.hpp  index_extents.hpp  index_view.hpp  index_view.t.cpp  indexing.hpp  indexing.t.cpp  kokkos_types.hpp  range_operators.hpp  ray.hpp  real3_operators.hpp  real3_operators.t.cpp  sentinels.hpp  shoccs_config.hpp  simulation_cycle.cpp  simulation_cycle.hpp  std_matchers.hpp  step_controller.hpp  types.hpp
src/app/: CMakeLists.txt  shoccs.cpp
src/fields/: CMakeLists.txt  ContainerTuple.hpp  ContainerTuple.t.cpp  Location.hpp  Scalar.hpp  Scalar.t.cpp  Scalar_fwd.hpp  Selector.hpp  Selector_fwd.hpp  SystemField.hpp  SystemField_fwd.hpp  Tuple.hpp  Tuple.t.cpp  TupleMath.hpp  TupleMath.t.cpp  TuplePipe.hpp  TuplePipe.t.cpp  TupleUtils.hpp  TupleUtils.t.cpp  Tuple_fwd.hpp  Vector.hpp  Vector.t.cpp  Vector_fwd.hpp  ViewTuple.hpp  ViewTuple.t.cpp  ViewTuple_Seg.cpp  algorithms.hpp  algorithms.t.cpp  container_tuple.hpp  container_tuple.t.cpp  contract.hpp  expr.hpp  expr.t.cpp  field.hpp  field.t.cpp  field_fwd.hpp  field_math.hpp  field_math.t.cpp  field_registry.hpp  field_registry.t.cpp  (+62 more)
src/geometry/: CMakeLists.txt  geometry.cpp  geometry.hpp  geometry.t.cpp  rect.cpp  rect.hpp  shapes.hpp  shapes.t.cpp  sphere.cpp
src/io/: CMakeLists.txt  FieldIO.cpp  FieldIO.hpp  field_data.cpp  field_data.hpp  field_io.cpp  field_io.hpp  field_io.t.cpp  format_test.cpp  interval.hpp  interval.t.cpp  logging.cpp  logging.hpp  logging.t.cpp  xdmf.cpp  xdmf.hpp  xdmf.t.cpp
src/lib/: CMakeLists.txt  run_from_sol.cpp  run_from_sol.hpp  shoccs.hpp
src/matrices/: Block.hpp  Block.t.cpp  CMakeLists.txt  CSR.cpp  CSR.hpp  CSR.t.cpp  Circulant.cpp  Circulant.hpp  Circulant.t.cpp  Dense.cpp  Dense.hpp  Dense.t.cpp  InnerBlock.cpp  InnerBlock.hpp  InnerBlock.t.cpp  Zeros.hpp  Zeros.t.cpp  block.hpp  block.t.cpp  circulant.cpp  circulant.hpp  circulant.t.cpp  coefficient_visitor.cpp  coefficient_visitor.hpp  coefficient_visitor.t.cpp  common.hpp  csr.cpp  csr.hpp  csr.t.cpp  dense.cpp  dense.hpp  dense.t.cpp  inner_block.cpp  inner_block.hpp  inner_block.t.cpp  inner_block_meta.hpp  matrix_visitor.hpp  unit_stride_visitor.cpp  unit_stride_visitor.hpp  unit_stride_visitor.t.cpp  (+2 more)
src/mesh/: CMakeLists.txt  Cartesian.cpp  Cartesian.hpp  Cartesian.t.cpp  CutGeometry.cpp  CutGeometry.hpp  CutGeometry.t.cpp  Index.hpp  Mesh.cpp  Mesh.hpp  Mesh.t.cpp  Rect.cpp  Rect.hpp  Selections.hpp  Shapes.hpp  Sphere.cpp  cartesian.cpp  cartesian.hpp  cartesian.t.cpp  mesh.cpp  mesh.hpp  mesh.t.cpp  mesh_types.hpp  mesh_view.hpp  mesh_view.t.cpp  object_geometry.cpp  object_geometry.hpp  object_geometry.t.cpp  rect.hpp  selections.hpp  shapes.hpp  shapes.t.cpp  sphere.cpp
src/mms/: CMakeLists.txt  gauss.hpp  gauss1d.cpp  gauss2d.cpp  gauss3d.cpp  lua_mms.cpp  lua_mms.hpp  manufactured_solutions.hpp  mms.cpp  mms.t.cpp
src/operators/: CMakeLists.txt  Derivative.cpp  Derivative.hpp  Derivative.t.cpp  DiscreteOperator.hpp  Divergence.hpp  Gradient.cpp  Gradient.hpp  Gradient.t.cpp  IdentityStencil.hpp  Laplacian.cpp  Laplacian.hpp  Laplacian.t.cpp  boundaries.cpp  boundaries.hpp  boundaries.t.cpp  derivative.cpp  derivative.hpp  derivative.t.cpp  derivative_.cpp  derivative_.t.cpp  directional.cpp  directional.hpp  directional.t.cpp  discrete_operator.hpp  divergence.cpp  divergence.hpp  divergence.t.cpp  divergence_.hpp  eigenvalue_visitor.cpp  eigenvalue_visitor.hpp  eigenvalue_visitor.t.cpp  gradient.cpp  gradient.hpp  gradient.t.cpp  gradient_.cpp  gradient_.t.cpp  identity_stencil.hpp  laplacian.cpp  laplacian.hpp  (+2 more)
src/random/: CMakeLists.txt  random.cpp  random.hpp
src/simulation/: CMakeLists.txt  SimulationBuilder.cpp  SimulationBuilder.hpp  SimulationCycle.cpp  SimulationCycle.hpp  simulation_builder.cpp  simulation_builder.hpp  simulation_cycle.cpp  simulation_cycle.hpp  simulation_cycle.t.cpp
src/stencils/: CMakeLists.txt  E2_1.cpp  E2_1.t.cpp  E2_2.cpp  E2_2.t.cpp  E4_1.cpp  E4_1.t.cpp  E4_2.cpp  E4_2.t.cpp  E4u_1.cpp  E4u_1.t.cpp  E6u_1.cpp  E6u_1.t.cpp  E8u_1.cpp  E8u_1.t.cpp  Stencils.hpp  gaussian_E4u_1.cpp  gaussian_E4u_1.t.cpp  multiquadric_E4u_1.cpp  multiquadric_E4u_1.t.cpp  polyE2_1.cpp  polyE2_1.t.cpp  stencil.cpp  stencil.hpp  stencils.hpp  tension_E4u_1.cpp  tension_E4u_1.t.cpp
src/systems/: CMakeLists.txt  EmptySystem.cpp  EmptySystem.hpp  Heat.cpp  Heat.hpp  InviscidVortex.cpp  InviscidVortex.hpp  ScalarWave.cpp  ScalarWave.hpp  System.cpp  System.hpp  cc_elliptic.cpp  cc_elliptic.hpp  cc_heat_equation.cpp  cc_heat_equation.hpp  empty_system.cpp  empty_system.hpp  euler_vortex.cpp  euler_vortex.hpp  heat.cpp  heat.hpp  heat.t.cpp  hyperbolic_eigenvalues.cpp  hyperbolic_eigenvalues.hpp  hyperbolic_eigenvalues.t.cpp  inviscid_vortex.cpp  inviscid_vortex.hpp  scalar_wave.cpp  scalar_wave.hpp  scalar_wave.t.cpp  scalar_wave_eigenvalues.cpp  scalar_wave_eigenvalues.hpp  system.cpp  system.hpp  vc_scalar_wave.cpp  vc_scalar_wave.hpp
src/temporal/: CMakeLists.txt  Integrator.cpp  (+22 more)
(+117 files in other folders)
