add_compile_definitions(SOL_ALL_SAFETIES_ON=1)

add_library(indexing INTERFACE)
add_unit_test(indexing "indexing" indexing)
add_unit_test(real3_operators "real3")

add_subdirectory(mesh)
add_subdirectory(fields)
add_subdirectory(geometry)
add_subdirectory(matrices)
add_subdirectory(stencils)
add_subdirectory(operators)
add_subdirectory(random)
add_subdirectory(io)
add_subdirectory(mms)