add_compile_definitions(SOL_ALL_SAFETIES_ON=1)

add_library(indexing INTERFACE)
add_unit_test(indexing "indexing" indexing)
#add_unit_test(index_view "indexing" indexing cppcoro range-v3::range-v3)
add_unit_test(real3_operators "real3" fields)

add_subdirectory(fields)
add_subdirectory(mesh)
add_subdirectory(matrices)
add_subdirectory(stencils)
add_subdirectory(operators)
add_subdirectory(utils)
add_subdirectory(random)
add_subdirectory(io)
add_subdirectory(mms)
add_subdirectory(systems)
add_subdirectory(temporal)
add_subdirectory(simulation)
add_subdirectory(lib)
add_subdirectory(app)
